junit: test project without modules but with modularized junit (IDEA-223329)
GitOrigin-RevId: f9d6bcc3a80edba5824b0d30e58dae73ac825fae